--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "allow-plugins": {
             "php-http/discovery": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "phpstan/extension-installer": true
         },
         "sort-packages": true
     },
@@ -56,7 +57,22 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "cs": [
+            "@ecs",
+            "@rector",
+            "@phpstan"
+        ],
+        "cs-fix": [
+            "@ecs-fix",
+            "@rector-fix"
+        ],
+        "ecs": "vendor/bin/ecs check",
+        "ecs-fix": "vendor/bin/ecs check --fix",
+        "rector": "vendor/bin/rector process --dry-run",
+        "rector-fix": "vendor/bin/rector process",
+        "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon",
+        "phpunit": "vendor/phpunit/phpunit/phpunit"
     },
     "conflict": {
         "symfony/symfony": "*"
@@ -69,6 +85,17 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.58"
+        "symfony/maker-bundle": "^1.58",
+        "phpstan/extension-installer": "^1.2",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpunit/phpunit": "^10.0",
+        "rector/rector": "*",
+        "symfony/browser-kit": "7.0.*",
+        "symfony/css-selector": "7.0.*",
+        "symfony/debug-bundle": "7.0.*",
+        "symfony/phpunit-bridge": "7.0.*",
+        "symfony/stopwatch": "7.0.*",
+        "symfony/web-profiler-bundle": "7.0.*",
+        "symplify/easy-coding-standard": "^11.2"
     }
 }
